# opendcdiag

./: .editorconfig  .gitattributes  .gitignore  .hash  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Doxyfile  LICENSE.3rdparty  README.md  SECURITY.md  meson-cross-win32.ini  meson-cross-win32.txt  meson-darwin.ini  meson-freebsd.ini  meson.build  meson_options.txt
framework/: Floats.c  Floats.cpp  amx_common.h  cpuid_internal.h  forkfd.h  frequency_manager.hpp  fuzzing.c  generated_vectors.c  interrupt_monitor.hpp  logging.cpp  logging.h  main.cpp  meson.build  mmap_region.c  random.cpp  random_mock.hpp  random_mocker.hpp  random_utils.cpp  sandstone.cpp  sandstone.h  sandstone_asm.h  sandstone_child_debug_common.h  sandstone_chrono.cpp  sandstone_chrono.h  sandstone_config.h  sandstone_config.h.in  sandstone_containers.cpp  sandstone_containers.h  sandstone_context_dump.cpp  sandstone_context_dump.h  sandstone_data.cpp  sandstone_data.h  sandstone_eigen_configurator.h  sandstone_iovec.h  sandstone_kvm.h  sandstone_opts.cpp  sandstone_opts.hpp  sandstone_p.h  sandstone_run.cpp  sandstone_run.hpp  (+37 more)
framework/device/: device.h  device_topology.h  logging_device.h  test_data_device.h
framework/device/cpu/: cpu_device.cpp  cpu_device.h  cpuid_internal.h  frequency_manager.hpp  logging.cpp  logging_cpu.cpp  logging_cpu.h  meson.build  premain.cpp  selftest.cpp  simd.conf  slicing.cpp  test_class.hpp  test_class_cpu.hpp  test_data_cpu.h  topology.cpp  topology_cpu.h
framework/device/gpu/: build_topology.cpp  gpu_device.cpp  gpu_device.h  logging_gpu.cpp  meson.build  multi_slice_gpu.h  test_class_gpu.hpp  test_data_gpu.h  topology.cpp  topology_gpu.h  ze_check.h  ze_enumeration.cpp  ze_enumeration.h  ze_kernel.h  ze_utils.cpp  ze_utils.h  ze_wrappers.h
framework/device/idxd/: base.hpp  build_topology.cpp  idxd_config.cpp  idxd_config.hpp  idxd_device.cpp  idxd_device.h  idxd_features.h  logging_idxd.cpp  meson.build  test_data_idxd.h  topology.cpp  topology_idxd.hpp
framework/devicedeps/: device.h  device_topology.h  devices.h
framework/devicedeps/cpu/: cpu_device.cpp  cpu_device.h  cpuid_internal.h  devices.h  meson.build  test_class.hpp  topology.cpp  topology.h  topology_cpu.h
framework/forkfd/: forkfd_c11.h  forkfd_freebsd.c  forkfd_linux.c
framework/fp_vectors/: Floats.h  static_vectors.h
framework/scripts/: generate-test-list.pl  generate_test_list.py  make-gitid.pl  weighted_runs_list2header.py  x86simd_generate.pl  xsave_generate.pl
framework/sysdeps/darwin/: cpu_affinity.cpp  futex.h  gettid.h  malloc.cpp  meson.build  pthread_barrier.cpp  pthread_barrier.h
framework/sysdeps/freebsd/: cpu_affinity.cpp  effective_cpu_freq.hpp  futex.h  gettid.h  malloc.cpp  meson.build
framework/sysdeps/generic/: effective_cpu_freq.hpp  frequency_manager.hpp  futex.h  kvm.c  memfpt.c  msr.c  physicaladdress.c  thermal_monitor.hpp
framework/sysdeps/linux/: cpu_affinity.cpp  effective_cpu_freq.hpp  extract-malloc.sh  frequency_manager.hpp  futex.h  gettid.h  interrupt_monitor.cpp  kvm.c  malloc.cpp  memfpt.cpp  meson.build  msr.c  physicaladdress.cpp  thermal_monitor.hpp
framework/sysdeps/unix/: child_debug.cpp  frequency_manager.hpp  meson.build  mmap_region.c  resource.cpp  signals.cpp  splitlock_detect.c  stacksize.cpp  tmpfile.c  virt.cpp
framework/sysdeps/win32/: aligned_alloc.c  child_debug.cpp  cpu_affinity.cpp  fcntl.c  meson.build  splitlock_detect.c  thermal_monitor.hpp  tmpfile.c  ucrt-mapping.c  unistd.c  unistd.h  win32_stdlib.h
framework/sysdeps/windows/: aligned_alloc.c  aligned_alloc.cpp  child_debug.cpp  cpu_affinity.cpp  errno.cpp  fcntl.c  fcntl.h  fnmatch.c  fnmatch.h  futex.h  gettid.cpp  gettid.h  macros.S  meson.build  mman.c  pthread.h  resource.cpp  sched.h  signals.cpp  splitlock_detect.c  sysexits.h  tmpfile.c  ucrt-mapping.c  unistd.c  unistd.h  virt.cpp  win32_errorstrings.h  win32_perror.c  win32_perror.cpp  win32_stdlib.h  win32_strerror.cpp
framework/test_selectors/: AlphabeticalSelector.h  ListFileSelector.h  OrderedSelector.h  PrioritizedSelector.h  SelectorFactory.cpp  SelectorFactory.h  TestrunSelectorBase.h  WeightedNonRepeatingSelector.h  WeightedRepeatingSelector.h  WeightedSelectorBase.cpp  WeightedSelectorBase.h
framework/unit-tests/: WeightedTestSelector_tests.cpp  opts_parser_tests.cpp  random_mocker.hpp  random_utils_mock.cpp  random_utils_mock.hpp  random_utils_mocked.cpp  random_utils_tests.cpp  sandstone_data_tests.cpp  sandstone_opts_tests.cpp  sandstone_random_utils_tests.cpp  sandstone_test_utils_tests.cpp  sandstone_utils_tests.c  sandstone_utils_tests.cpp  test_knob_tests.cpp  tests_dummy.cpp  thermal_monitor_tests.cpp  topology_tests.cpp
tests/: meson.build
tests/common/: meson.build
tests/common/mce_check/: mce_check.cpp
tests/common/smi_count/: smi_count.cpp
tests/cpu/: meson.build
tests/cpu/cross_compare_demo/: cross_compare_demo.c
tests/cpu/eigen_gemm/: double14.cpp  gemm_float_dynamic_square.cpp
tests/cpu/eigen_sparse/: eigen_sparse.cpp
tests/cpu/eigen_svd/: sandstone_eigen_common.h  svd.cpp  svd_cdouble.cpp  svd_cdouble_noavx512.cpp  svd_double.cpp  svd_fvectors.cpp
tests/cpu/eigen_svd_jacobi/: svd.cpp  svd_cdouble.cpp  svd_double.cpp
tests/cpu/examples/: vector_add.c
tests/eigen_gemm/: double14.cpp  gemm_cdouble_dynamic_square.cpp  gemm_double_dynamic_square.cpp  gemm_float_dynamic_square.cpp
tests/eigen_sparse/: eigen_sparse.cpp
tests/eigen_svd/: sandstone_eigen_common.h  svd.cpp  svd_cdouble.cpp  svd_cdouble_avx512.cpp  svd_cdouble_noavx512.cpp  svd_double.cpp  svd_fvectors.cpp
tests/eigen_svd_jacobi/: svd.cpp  svd_cdouble.cpp  svd_double.cpp  svd_fvectors.cpp
tests/examples/: cross_compare_demo.c  simple_add.c  vector_add.c
tests/fuzzer/: fuzzer.c
tests/gpu/: meson.build
tests/idxd/: idxd_dummy_config.cpp  meson.build
tests/ifs/: ifs.c  ifs.cpp  sandstone_ifs.h
tests/mce_check/: mce_check.cpp
tests/openssl/: openssl_sha.cpp
tests/smi_count/: smi_count.cpp
tests/zlib/: fuzz.c  test.c
tests/zlib_aaa/: test.c
tests/zstd/: test.c
tests/zstd_aaa/: test.c
(+99 files in other folders)
