# Copyright 2022 Intel Corporation.
# SPDX-License-Identifier: Apache-2.0

option('logging_format', type : 'combo', choices : ['yaml', 'tap', 'no_output'], value : 'yaml',
    description : 'Set build-time default logging format to "no_output", "yaml" (default), or "tap".')
option('march_base', type : 'string', value : '',
    description : 'Build framework with this base optimization -march= value (default: "haswell").')
option('framework_options', type : 'array', value : [],
    description : 'Configuration options for the framework. ' +
    'Possible options: restricted-cmdline, no-child-debug{,-crashes,-hangs}, no-child-backtrace, no-triage')
option('dependency_link', type : 'combo', choices : ['dynamic', 'static'], value : 'dynamic',
    description : 'Link preference for dependencies: dynamic (default) or static')
option('docdir', type : 'string', value : 'doc/dcdiag',
    description : 'Directory name of where documentation will be installed.')
option('static_libstdcpp', type : 'boolean', value : false,
    description : 'Link with -static-libstdc++ (default false).')
option('executable_name', type : 'string', value : 'opendcdiag',
    description : 'Output name of the main binary (default "opendcdiag").')
option('fallback_exec', type : 'string', value : '',
    description : 'Executable to run if processor does not support required features (e.g. AVX2)')
option('selftests', type : 'boolean', value : true,
    description : 'Build in selftests (default true)')
option('version_suffix', type : 'string', value: '',
    description : 'Suffix to be added to the version number (e.g., build variant)')
option('builtin_test_list', type : 'string', value : '',
    description : 'List of name-file pairs that specify the built-in test lists to be embedded into the binary, e.g. default:data/default.txt,skx:data/skx.txt')
option('ssl_link_type', type: 'combo', choices : ['none', 'dynamic', 'loaded', 'static'], value: 'none',
    description : 'Link with openssl library if available (default none).')
option('fuzzing', type : 'boolean', value : false,
    description : 'Build in fuzzing (default false)')
option('afl_inc', type : 'string', value : '',
    description : '(Optional) Directory with AFL header files (absolute path).')
option('coverage', type : 'boolean', value : false,
    description : 'Enable code coverage (default false)')
